# videos_processor

./: .env.schema  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  build.rs  install
src/: consumer.rs  main.rs  processor.py
src/api/: api.rs  api_call_error.rs  cameras.rs  mod.rs  node.rs
src/camera/: api.rs  camera.rs  mod.rs
src/consumer/: errors.rs  message_handling_error.rs  mod.rs  node_creation_error.rs  temporal_video_message.rs  temporal_videos_consumer.rs
src/json_utils/: json_field_missing_error.rs  json_utils.rs  mod.rs
src/node/: api.rs  errors.rs  mod.rs  node.rs  node_pool.rs  video_download_error.rs
src/structs/: camera.rs  mod.rs  temporal_video_message.rs
