[package]
name = "videos_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.6.0"
async-trait = "0.1.80"
log = "0.4.21"
prost = "0.12.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["fs"] }
tonic = "0.11.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
